--- a/src/MvcTemplate.Controllers/MvcTemplate.Controllers.csproj
+++ b/src/MvcTemplate.Controllers/MvcTemplate.Controllers.csproj
@@ -36,9 +36,8 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Datalist.Core, Version=5.5.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Datalist.Core, Version=6.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Datalist.Core.6.0.0\lib\net45\Datalist.Core.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
@@ -117,6 +116,7 @@
     <Compile Include="ValidatedController.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
