--- a/src/MvcTemplate.Objects/MvcTemplate.Objects.csproj
+++ b/src/MvcTemplate.Objects/MvcTemplate.Objects.csproj
@@ -36,9 +36,8 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Datalist.Core, Version=5.5.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Datalist.Core, Version=6.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Datalist.Core.6.0.0\lib\net45\Datalist.Core.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
@@ -107,6 +106,7 @@
     <Compile Include="Views\BaseView.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
