--- a/src/MvcTemplate.Services/MvcTemplate.Services.csproj
+++ b/src/MvcTemplate.Services/MvcTemplate.Services.csproj
@@ -66,6 +66,9 @@
     <Compile Include="BaseService.cs" />
     <Compile Include="IService.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
