--- a/src/MvcTemplate.Validators/MvcTemplate.Validators.csproj
+++ b/src/MvcTemplate.Validators/MvcTemplate.Validators.csproj
@@ -91,6 +91,7 @@
     <Compile Include="IValidator.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
